--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav ul { background: #ffffff; display: flex; list-style-type: none; text-align: 
 nav ul li { width: 20%; }
 nav ul li a { display: block; font-size: 20px; padding: 10px; }
 
-header { max-width: 400px; width: 100%; }
+header { margin: auto; max-width: 400px; width: 100%; }
 header nav ul li { width: 25%; }
 header nav ul li a { }
 header nav ul li:nth-child(1) { text-align: left; }
@@ -26,7 +26,8 @@ header nav ul li:last-of-type { text-align: right; }
 header nav ul li.logo { font-family: 'Pacifico', cursive; width: 50%; padding: 0; }
 header nav ul li.logo a { padding: 0; }
 footer { bottom: 0; position: fixed; width: 100%; }
-main { height: 82vh; max-width: 400px; width: 100%; }
+footer nav { margin: auto; max-width: 400px; width: 100%; }
+main { height: 82vh; margin: auto;  max-width: 400px; width: 100%; }
 
 .stories { background: #f1f1f1; overflow-y: auto; padding: 10px; }
 .stories > div { width: 200%; }
@@ -47,4 +48,3 @@ main { height: 82vh; max-width: 400px; width: 100%; }
 
 [data-time-ago] { color: #aaa; font-size: 10px; text-transform: uppercase; }
 
-footer { max-width: 400px; width: 100%; }
